Update UI and backend to support dynamic asset risk
This commit introduces changes in both front-end templates and back-end code to support dynamic asset risk indication in system register. Risk scores are now derived from the `RISK_SCALE_PROPERTY_NAME` in the `RelationDTO`. This also involved refactoring `RelationDTO` and correcting some typos.