@@ -2,6 +2,7 @@ package dk.digitalidentity.controller.mvc;
 
 import dk.digitalidentity.dao.ConsequenceAssessmentDao;
 import dk.digitalidentity.model.dto.DataProcessingDTO;
+import dk.digitalidentity.model.dto.RelationDTO;
 import dk.digitalidentity.model.entity.Asset;
 import dk.digitalidentity.model.entity.AssetSupplierMapping;
 import dk.digitalidentity.model.entity.ChoiceList;
@@ -32,6 +33,7 @@ import dk.digitalidentity.service.UserService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.tuple.Pair;
 import org.hibernate.validator.constraints.UUID;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
@@ -54,6 +56,7 @@ import java.util.Set;
 import java.util.TreeMap;
 import java.util.stream.Collectors;
 
+import static dk.digitalidentity.Constants.RISK_SCALE_PROPERTY_NAME;
 import static dk.digitalidentity.util.ComplianceStringUtils.asNumber;
 
 @Slf4j
@@ -246,8 +249,17 @@ public class RegisterController {
         final ChoiceList gdprChoiceList = choiceService.findChoiceList("register-gdpr")
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Could not find GDPR Choices"));
         final List<ChoiceValue> gdprChoices = sortChoicesNumeric(gdprChoiceList);
-        final List<Relatable> relatedAssets = relationService.findAllRelatedTo(register).stream().filter(r -> r.getRelationType() == RelationType.ASSET).toList();
-        final List<AssetSupplierMapping> assetSupplierMappingList = relatedAssets.stream().map(Asset.class::cast).map(assetService::findMainSupplier).collect(Collectors.toList());
+        final List<RelationDTO<Register, Relatable>> relatedAssets = relationService.findRelations(register, RelationType.ASSET);
+
+        // The code below transforms a list of related assets into a list of pairs.
+        // Each pair contains the value of "RISK_SCALE_PROPERTY_NAME" (or a default of 100 if not available) and
+        // the primary supplier for the asset.
+        final List<Pair<Integer, AssetSupplierMapping>> assetSupplierMappingList = relatedAssets.stream()
+            .map(r -> Pair.of(r.getProperties().entrySet().stream()
+                .filter(p -> p.getKey().equals(RISK_SCALE_PROPERTY_NAME)).findFirst().map(v -> Integer.valueOf(v.getValue()))
+                .orElse(100), (Asset)r.getB()))
+            .map(r -> Pair.of(r.getLeft(), assetService.findMainSupplier(r.getRight())))
+            .collect(Collectors.toList());
 
         model.addAttribute("section", section);
         model.addAttribute("dpChoices", dataProcessingService.getChoices());
